Add log4j properties for test root

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -15,22 +15,12 @@
 # limitations under the License.
 
 
-log4j.rootLogger=INFO, dleger
+log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
 
-log4j.appender.dleger=org.apache.log4j.RollingFileAppender
-log4j.appender.dleger.File=${user.home}/logs/dleger/dleger.log
-log4j.appender.dleger.Append=true
-log4j.appender.dleger.MaxFileSize=500000000
-log4j.appender.dleger.MaxBackupIndex=10
-log4j.appender.dleger.layout=org.apache.log4j.PatternLayout
-log4j.appender.dleger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
-
-
-
-log4j.logger.RocketmqRemoting=ERROR, dleger
+log4j.logger.RocketmqRemoting=ERROR, stdout
 log4j.additivity.RocketmqRemoting=false
