--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -34,3 +34,9 @@ log4j.appender.dleger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p 
 
 log4j.logger.RocketmqRemoting=ERROR, dleger
 log4j.additivity.RocketmqRemoting=false
+
+
+log4j.logger.org.apache.rocketmq.dleger.cmdline=INFO, stdout
+log4j.additivity.org.apache.rocketmq.dleger.cmdline=false
+
+
