--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.6</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.21.0</version>
     </dependency>
 
     <dependency>
@@ -37,6 +37,13 @@
       <artifactId>jcommander</artifactId>
       <version>1.72</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.6</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
