--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -22,5 +22,5 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
 
-log4j.logger.RocketmqRemoting=ERROR, stdout
+log4j.logger.RocketmqRemoting=WARN, stdout
 log4j.additivity.RocketmqRemoting=false
