--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
             </archive>
             <finalName>DLeger</finalName>
             <appendAssemblyId>false</appendAssemblyId>
+            <attach>false</attach>
             <descriptorRefs>
               <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
