--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
@@ -13,15 +13,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-
+#
 log4j.rootLogger=INFO, dleger
-
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
-
 log4j.appender.dleger=org.apache.log4j.RollingFileAppender
 log4j.appender.dleger.File=${user.home}/logs/dleger/dleger.log
 log4j.appender.dleger.Append=true
@@ -29,13 +26,8 @@ log4j.appender.dleger.MaxFileSize=500000000
 log4j.appender.dleger.MaxBackupIndex=10
 log4j.appender.dleger.layout=org.apache.log4j.PatternLayout
 log4j.appender.dleger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
-
-
-
 log4j.logger.RocketmqRemoting=ERROR, dleger
 log4j.additivity.RocketmqRemoting=false
-
-
 log4j.logger.org.apache.rocketmq.dleger.cmdline=INFO, stdout
 log4j.additivity.org.apache.rocketmq.dleger.cmdline=false
 
