--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,10 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=OFF, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
-log4j.logger.RocketmqRemoting=WARN, stdout
+log4j.logger.RocketmqRemoting=OFF, stdout
 log4j.additivity.RocketmqRemoting=false
