--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <groupId>io.openmessaging.storage</groupId>
     <artifactId>dledger</artifactId>
     <version>0.1-SNAPSHOT</version>
