--- a/pom.xml
+++ b/pom.xml
@@ -247,4 +247,12 @@
         </plugins>
     </build>
 
+
+    <scm>
+        <url>git@github.com:openmessaging/openmessaging-storage-dledger.git</url>
+        <connection>scm:git:git@github.com:openmessaging/openmessaging-storage-dledger.git</connection>
+        <developerConnection>scm:git:git@github.com:openmessaging/openmessaging-storage-dledger.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
