--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,7 +27,7 @@ log4j.appender.dledger.layout=org.apache.log4j.PatternLayout
 log4j.appender.dledger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
 log4j.logger.RocketmqRemoting=ERROR, dledger
 log4j.additivity.RocketmqRemoting=false
-log4j.logger.io.openmessaging.storage.dledger.cmdline=INFO, stdout
+log4j.logger.io.openmessaging.storage.dledger.cmdline=DEBUG, stdout
 log4j.additivity.io.openmessaging.storage.dledger.cmdline=false
 
 
