--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
 
     <scm>
         <url>git@github.com:openmessaging/dledger.git</url>
-        <connection>scm:git:git@github.com:openmessaging/.git</connection>
+        <connection>scm:git:git@github.com:openmessaging/dledger.git</connection>
         <developerConnection>scm:git:git@github.com:openmessaging/dledger.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
