--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
         <!-- Test only dependencies follow -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
