--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
