--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
+    types: [ opened, reopened, synchronize ]
     branches: [ "master" ]
 
 jobs:
