--- a/command/pom.xml
+++ b/command/pom.xml
@@ -20,19 +20,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dledger-parent</artifactId>
+        <artifactId>dledger-all</artifactId>
         <groupId>io.openmessaging.storage</groupId>
         <version>0.2.8-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>command</artifactId>
+    <artifactId>dledger-command</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>io.openmessaging.storage</groupId>
-            <artifactId>proxy</artifactId>
-            <version>${project.version}</version>
+            <artifactId>dledger-proxy</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
