--- a/dledger/pom.xml
+++ b/dledger/pom.xml
@@ -20,7 +20,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dledger-parent</artifactId>
+        <artifactId>dledger-all</artifactId>
         <groupId>io.openmessaging.storage</groupId>
         <version>0.2.8-SNAPSHOT</version>
     </parent>
