[ISSUE #231]Fix run DLedger Server with jar can't find Main class

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>io.openmessaging.storage.dledger.cmdline.BossCommand</mainClass>
+                                <mainClass>io.openmessaging.storage.dledger.command.BossCommand</mainClass>
                             </manifest>
                         </archive>
                         <finalName>DLedger</finalName>
