--- a/dledger/src/main/resources/config.yaml
+++ b/dledger/src/main/resources/config.yaml
@@ -3,11 +3,19 @@ configs:
     selfId: n0
     peers: n0-127.0.0.1:10000;n1-127.0.0.1:10000;n2-127.0.0.1:10000
     preferredLeaderIds: n0
+    learners: n3-127.0.0.1:10000
   - group: g0
     selfId: n1
     peers: n0-127.0.0.1:10000;n1-127.0.0.1:10000;n2-127.0.0.1:10000
     preferredLeaderIds: n0
+    learners: n3-127.0.0.1:10000
   - group: g0
     selfId: n2
     peers: n0-127.0.0.1:10000;n1-127.0.0.1:10000;n2-127.0.0.1:10000
     preferredLeaderIds: n0
+    learners: n3-127.0.0.1:10000
+  - group: g0
+    selfId: n3
+    peers: n0-127.0.0.1:10000;n1-127.0.0.1:10000;n2-127.0.0.1:10000
+    preferredLeaderIds: n0
+    learners: n3-127.0.0.1:10000
