--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
 
     <groupId>io.openmessaging.storage</groupId>
     <artifactId>dledger-all</artifactId>
-    <version>0.3.3.1-SNAPSHOT</version>
+    <version>0.3.1.1-SNAPSHOT</version>
+
+    <name>openmessaging-dledger</name>
+    <description>A raft-based java library for building high-available, high-durable, strong-consistent commitlog.</description>
+    <url>https://github.com/openmessaging/dledger</url>
 
     <packaging>pom</packaging>
 
@@ -274,6 +278,31 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
             </plugin>
         </plugins>
     </build>
