--- a/command/pom.xml
+++ b/command/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>dledger-all</artifactId>
         <groupId>io.openmessaging.storage</groupId>
-        <version>0.3.1.2</version>
+        <version>0.3.1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
