feat(example): add Register Model DLedger
1. add Register Model DLedger

Closes https://github.com/openmessaging/dledger/issues/286

--- a/dledger/pom.xml
+++ b/dledger/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dledger</artifactId>
+    <artifactId>dledger-core</artifactId>
 
     <dependencies>
         <dependency>
