feat(jepsen): add jepsen test framework
1. add jepsen test framework

Closes https://github.com/openmessaging/dledger/issues/286

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -37,7 +37,7 @@
                             </mainClass>
                         </manifest>
                     </archive>
-                    <finalName>RegisterDLedger</finalName>
+                    <finalName>register-dledger</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <attach>false</attach>
                     <descriptorRefs>
